[package]
name = "humbug"
version = "0.1.0"
authors = ["David Malinge <david.malinge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
rand = "0.8.3"
rand_distr = "0.4.0"

[profile.dev]
split-debuginfo = "unpacked"
